--- a/pre-processing/pre-processing-cfn.yaml
+++ b/pre-processing/pre-processing-cfn.yaml
@@ -85,7 +85,7 @@ Resources:
     Type: AWS::Events::Rule
     Properties:
       Description: "ScheduledRule"
-      ScheduleExpression: "cron(0 1 ? * * *)"
+      ScheduleExpression: "cron(0 0/4 * * ? *)"
       State: "ENABLED"
       Targets:
         -
